added fixes on detecting peaks
added fixes on detecting peaks

--- a/afib-predict/1_eda.ipynb
+++ b/afib-predict/1_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -14,8 +14,10 @@
       "Requirement already satisfied: scikit-learn in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (1.5.2)\n",
       "Requirement already satisfied: matplotlib in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (3.9.2)\n",
       "Requirement already satisfied: wfdb in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (4.1.2)\n",
-      "Collecting statsmodels\n",
-      "  Downloading statsmodels-0.14.4-cp312-cp312-macosx_11_0_arm64.whl.metadata (9.2 kB)\n",
+      "Requirement already satisfied: statsmodels in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (0.14.4)\n",
+      "Requirement already satisfied: seaborn in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (0.13.2)\n",
+      "Collecting bayesian-optimization\n",
+      "  Downloading bayesian_optimization-2.0.0-py3-none-any.whl.metadata (8.9 kB)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from pandas) (2.9.0)\n",
       "Requirement already satisfied: pytz>=2020.1 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from pandas) (2024.2)\n",
       "Requirement already satisfied: tzdata>=2022.7 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from pandas) (2024.2)\n",
@@ -31,8 +33,9 @@
       "Requirement already satisfied: pyparsing>=2.3.1 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from matplotlib) (3.2.0)\n",
       "Requirement already satisfied: SoundFile>=0.10.0 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from wfdb) (0.12.1)\n",
       "Requirement already satisfied: requests>=2.8.1 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from wfdb) (2.32.3)\n",
-      "Collecting patsy>=0.5.6 (from statsmodels)\n",
-      "  Using cached patsy-0.5.6-py2.py3-none-any.whl.metadata (3.5 kB)\n",
+      "Requirement already satisfied: patsy>=0.5.6 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from statsmodels) (0.5.6)\n",
+      "Collecting colorama<0.5.0,>=0.4.6 (from bayesian-optimization)\n",
+      "  Using cached colorama-0.4.6-py2.py3-none-any.whl.metadata (17 kB)\n",
       "Requirement already satisfied: six in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from patsy>=0.5.6->statsmodels) (1.16.0)\n",
       "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from requests>=2.8.1->wfdb) (3.4.0)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from requests>=2.8.1->wfdb) (3.10)\n",
@@ -40,16 +43,15 @@
       "Requirement already satisfied: certifi>=2017.4.17 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from requests>=2.8.1->wfdb) (2024.8.30)\n",
       "Requirement already satisfied: cffi>=1.0 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from SoundFile>=0.10.0->wfdb) (1.17.1)\n",
       "Requirement already satisfied: pycparser in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from cffi>=1.0->SoundFile>=0.10.0->wfdb) (2.22)\n",
-      "Downloading statsmodels-0.14.4-cp312-cp312-macosx_11_0_arm64.whl (9.9 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.9/9.9 MB\u001b[0m \u001b[31m30.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hUsing cached patsy-0.5.6-py2.py3-none-any.whl (233 kB)\n",
-      "Installing collected packages: patsy, statsmodels\n",
-      "Successfully installed patsy-0.5.6 statsmodels-0.14.4\n"
+      "Downloading bayesian_optimization-2.0.0-py3-none-any.whl (30 kB)\n",
+      "Using cached colorama-0.4.6-py2.py3-none-any.whl (25 kB)\n",
+      "Installing collected packages: colorama, bayesian-optimization\n",
+      "Successfully installed bayesian-optimization-2.0.0 colorama-0.4.6\n"
      ]
     }
    ],
    "source": [
-    "!pip install pandas numpy scikit-learn matplotlib wfdb statsmodels\n"
+    "!pip install pandas numpy scikit-learn matplotlib wfdb statsmodels seaborn bayesian-optimization\n"
    ]
   },
   {
