--- a/afib-predict/1_eda.ipynb
+++ b/afib-predict/1_eda.ipynb
@@ -2,61 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (2.2.3)\n",
-      "Requirement already satisfied: numpy in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (2.1.3)\n",
-      "Requirement already satisfied: scikit-learn in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (1.5.2)\n",
-      "Requirement already satisfied: matplotlib in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (3.9.2)\n",
-      "Requirement already satisfied: wfdb in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (4.1.2)\n",
-      "Requirement already satisfied: statsmodels in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (0.14.4)\n",
-      "Requirement already satisfied: seaborn in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (0.13.2)\n",
-      "Collecting bayesian-optimization\n",
-      "  Downloading bayesian_optimization-2.0.0-py3-none-any.whl.metadata (8.9 kB)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from pandas) (2.9.0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from pandas) (2024.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from pandas) (2024.2)\n",
-      "Requirement already satisfied: scipy>=1.6.0 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from scikit-learn) (1.14.1)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from scikit-learn) (1.4.2)\n",
-      "Requirement already satisfied: threadpoolctl>=3.1.0 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from scikit-learn) (3.5.0)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from matplotlib) (1.3.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from matplotlib) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from matplotlib) (4.54.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from matplotlib) (1.4.7)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from matplotlib) (24.1)\n",
-      "Requirement already satisfied: pillow>=8 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from matplotlib) (11.0.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from matplotlib) (3.2.0)\n",
-      "Requirement already satisfied: SoundFile>=0.10.0 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from wfdb) (0.12.1)\n",
-      "Requirement already satisfied: requests>=2.8.1 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from wfdb) (2.32.3)\n",
-      "Requirement already satisfied: patsy>=0.5.6 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from statsmodels) (0.5.6)\n",
-      "Collecting colorama<0.5.0,>=0.4.6 (from bayesian-optimization)\n",
-      "  Using cached colorama-0.4.6-py2.py3-none-any.whl.metadata (17 kB)\n",
-      "Requirement already satisfied: six in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from patsy>=0.5.6->statsmodels) (1.16.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from requests>=2.8.1->wfdb) (3.4.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from requests>=2.8.1->wfdb) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from requests>=2.8.1->wfdb) (2.2.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from requests>=2.8.1->wfdb) (2024.8.30)\n",
-      "Requirement already satisfied: cffi>=1.0 in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from SoundFile>=0.10.0->wfdb) (1.17.1)\n",
-      "Requirement already satisfied: pycparser in /Users/mlmnl/Documents/GitHub/artificially-intelligent/.conda/lib/python3.12/site-packages (from cffi>=1.0->SoundFile>=0.10.0->wfdb) (2.22)\n",
-      "Downloading bayesian_optimization-2.0.0-py3-none-any.whl (30 kB)\n",
-      "Using cached colorama-0.4.6-py2.py3-none-any.whl (25 kB)\n",
-      "Installing collected packages: colorama, bayesian-optimization\n",
-      "Successfully installed bayesian-optimization-2.0.0 colorama-0.4.6\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install pandas numpy scikit-learn matplotlib wfdb statsmodels seaborn bayesian-optimization\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -114,13 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_ecg_record(record_name, data_path, labels_df):\n",
     "    # Read the record\n",
     "    record = wfdb.rdrecord(f'{data_path}/{record_name}')\n",
+    "    annotation = wfdb.rdann(f'{data_path}/{record_name}', 'atr', sampfrom=180, sampto=4000,shift_samps=True)\n",
     "    signals = record.p_signal\n",
     "    \n",
     "    # Get the label for this record\n",
@@ -147,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
