updated model performance

--- a/kevin/kevin_tutorial.ipynb
+++ b/kevin/kevin_tutorial.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello! I'm feeling like a well-optimized algorithm—running smoothly and ready to provide some clean code! How about you?\n"
+      "I'm doing great, thanks! Just like a well-optimized algorithm, I’m running smoothly! How about you? Ready to debug some fun? 😄\n"
      ]
     }
    ],
@@ -150,14 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm \"bugging\" along just fine, thanks for asking! Ready to dive into some coding and bring out the good in that messy codebase of yours! What's on the agenda today?\n"
+      "I'm coding along just fine, thanks for asking! Or should I say, compiling along? (get it?) Seriously though, it's great to meet you! What brings you here today? Want to learn some clean code and have a laugh while doing it?\n"
      ]
     }
    ],
@@ -195,41 +195,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "### Filename : components/LoginPage.tsx\n",
+      "### Filename : pages/login.tsx\n",
       "```typescript\n",
-      "import React from 'react';\n",
+      "import React, { useState } from 'react';\n",
       "\n",
-      "interface Props {}\n",
-      "\n",
-      "const LoginPage = ({}: Props) => {\n",
-      "  const handleSubmit = (event: React.FormEvent<HTMLFormElement>) => {\n",
-      "    event.preventDefault();\n",
-      "    // Handle form submission logic here\n",
-      "  };\n",
+      "function Login() {\n",
+      "  const [email, setEmail] = useState('');\n",
+      "  const [password, setPassword] = useState('');\n",
       "\n",
       "  return (\n",
-      "    <div>\n",
-      "      <form onSubmit={handleSubmit}>\n",
-      "        <label>Email:</label>\n",
-      "        <input type=\"email\" name=\"email\" />\n",
-      "        <br />\n",
-      "        <label>Password:</label>\n",
-      "        <input type=\"password\" name=\"password\" />\n",
-      "        <br />\n",
-      "        <button type=\"submit\">Login</button>\n",
+      "    <div className=\"container mx-auto p-4\">\n",
+      "      <h1 className=\"text-3xl font-bold\">Login</h1>\n",
+      "      <form className=\"mt-6\" onSubmit={(e) => e.preventDefault()}>\n",
+      "        <div className=\"mb-4\">\n",
+      "          <label className=\"block text-gray-700 text-sm font-bold mb-2\" htmlFor=\"email\">\n",
+      "            Email\n",
+      "          </label>\n",
+      "          <input\n",
+      "            className=\"shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline\"\n",
+      "            id=\"email\"\n",
+      "            type=\"email\"\n",
+      "            value={email}\n",
+      "            onChange={(e) => setEmail(e.target.value)}\n",
+      "          />\n",
+      "        </div>\n",
+      "        <div className=\"mb-4\">\n",
+      "          <label className=\"block text-gray-700 text-sm font-bold mb-2\" htmlFor=\"password\">\n",
+      "            Password\n",
+      "          </label>\n",
+      "          <input\n",
+      "            className=\"shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline\"\n",
+      "            id=\"password\"\n",
+      "            type=\"password\"\n",
+      "            value={password}\n",
+      "            onChange={(e) => setPassword(e.target.value)}\n",
+      "          />\n",
+      "        </div>\n",
       "      </form>\n",
       "    </div>\n",
       "  );\n",
-      "};\n",
+      "}\n",
       "\n",
-      "export default LoginPage;\n",
+      "export default Login;\n",
       "```\n"
      ]
     }
@@ -270,16 +284,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating file: components/LoginPage.tsx\n",
-      "Writing content to file: examples/components/LoginPage.tsx\n",
-      "Files created: ['examples/components/LoginPage.tsx']\n"
+      "Creating file: pages/login.tsx\n",
+      "Writing content to file: examples/pages/login.tsx\n",
+      "Files created: ['examples/pages/login.tsx']\n"
      ]
     }
    ],
@@ -329,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +365,7 @@
       "  return (\n",
       "    <div>\n",
       "      <form onSubmit={handleSubmit}>\n",
-      "        <label>Username:</label>\n",
+      "        <label>Username:</label> {/* updated from \"Email:\" to \"Username:\" */}\n",
       "        <input type=\"text\" name=\"username\" />\n",
       "        <br />\n",
       "        <label>Password:</label>\n",
@@ -409,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -484,8 +498,8 @@
       "> next lint\n",
       "\n",
       "\n",
-      "\u001b[36m./src/app/(private)/document-management/incoming/[id]/_hooks/use-form-dockets.ts\u001b[39m\n",
-      "\u001b[33m59\u001b[39m:\u001b[33m5\u001b[39m  \u001b[33m\u001b[1mWarning\u001b[22m\u001b[39m: React Hook useEffect has missing dependencies: 'form' and 'selectedRowDetails'. Either include them or remove the dependency array.  \u001b[90m\u001b[1mreact-hooks/exhaustive-deps\u001b[22m\u001b[39m\n",
+      "\u001b[36m./src/app/(private)/practice-management/case-search/_hooks/use-case-form-state.ts\u001b[39m\n",
+      "\u001b[33m44\u001b[39m:\u001b[33m5\u001b[39m  \u001b[33m\u001b[1mWarning\u001b[22m\u001b[39m: React Hook useMemo has a missing dependency: 'latestCaseNo'. Either include it or remove the dependency array.  \u001b[90m\u001b[1mreact-hooks/exhaustive-deps\u001b[22m\u001b[39m\n",
       "\n",
       "\u001b[36minfo\u001b[39m  - Need to disable some ESLint rules? Learn more here: https://nextjs.org/docs/basic-features/eslint#disabling-rules\n",
       "\n"
@@ -515,14 +529,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'./src/app/(private)/document-management/incoming/[id]/_hooks/use-form-dockets.ts': [\"59:5  Warning: React Hook useEffect has missing dependencies: 'form' and 'selectedRowDetails'. Either include them or remove the dependency array.  react-hooks/exhaustive-deps\"]}\n"
+      "{'./src/app/(private)/practice-management/case-search/_hooks/use-case-form-state.ts': [\"44:5  Warning: React Hook useMemo has a missing dependency: 'latestCaseNo'. Either include it or remove the dependency array.  react-hooks/exhaustive-deps\"]}\n"
      ]
     }
    ],
@@ -551,14 +565,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./src/app/(private)/document-management/incoming/[id]/_hooks/use-form-dockets.ts\n"
+      "./src/app/(private)/practice-management/case-search/_hooks/use-case-form-state.ts\n"
      ]
     }
    ],
@@ -569,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,15 +648,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fixing lint issues in ./src/app/(private)/document-management/incoming/[id]/_hooks/use-form-dockets.ts...\n",
-      "[\"59:5  Warning: React Hook useEffect has missing dependencies: 'form' and 'selectedRowDetails'. Either include them or remove the dependency array.  react-hooks/exhaustive-deps\"]\n"
+      "Fixing lint issues in ./src/app/(private)/practice-management/case-search/_hooks/use-case-form-state.ts...\n",
+      "[\"44:5  Warning: React Hook useMemo has a missing dependency: 'latestCaseNo'. Either include it or remove the dependency array.  react-hooks/exhaustive-deps\"]\n"
      ]
     }
    ],
@@ -657,81 +671,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Here is the code with the lint issue fixed:\n",
+      "Here's the updated code with the lint issue fixed:\n",
       "\n",
       "```typescript\n",
-      "import { useEffect } from 'react'\n",
+      "import { useEffect, useMemo, useState } from 'react'\n",
+      "\n",
+      "import { CaseWithRelations } from '@prisma/zod'\n",
+      "import { formSchema } from '../_components/case-search-schema'\n",
+      "import { useAction } from '@/hooks/use-action'\n",
+      "import { useCaseSearchOptionsStore } from '../_store/use-case-search-options-store'\n",
       "import { useForm } from 'react-hook-form'\n",
-      "import { useRowStore } from '@/store/use-row-store'\n",
-      "import { useSchemaDockets } from './use-schema-dockets'\n",
       "import { z } from 'zod'\n",
       "import { zodResolver } from '@hookform/resolvers/zod'\n",
       "\n",
-      "export function useFormDockets() {\n",
-      "  const selectedRowDetails = useRowStore((s) => s.selectedRowDetails)\n",
+      "interface CaseFormProps {\n",
+      "  caseData?: CaseWithRelations\n",
+      "  isAddCase?: boolean\n",
+      "}\n",
       "\n",
-      "  const schema = useSchemaDockets()\n",
+      "export function useCaseFormState({\n",
+      "  caseData,\n",
+      "  isAddCase = true,\n",
+      "}: CaseFormProps) {\n",
+      "  const statuses = useCaseSearchOptionsStore((state) => state.statuses)\n",
+      "  const [isSubmitting, setIsSubmitting] = useState(false)\n",
       "\n",
-      "  const form = useForm<z.infer<typeof schema>>({\n",
-      "    resolver: zodResolver(schema),\n",
-      "    defaultValues: {\n",
-      "      scannedDocumentLocation: '',\n",
-      "      dateReceived: new Date(),\n",
-      "      dateAIProcessed: undefined,\n",
-      "      dateManualVerified: undefined,\n",
-      "      durationOcr: undefined,\n",
-      "      durationDocket: undefined,\n",
-      "      extConfidenceScore: undefined,\n",
-      "      ocrConfidenceScore: undefined,\n",
-      "      completenessScore: undefined,\n",
-      "      importanceScore: undefined,\n",
-      "      accuracyScore: undefined,\n",
-      "      totalPages: undefined,\n",
-      "      finalDocumentLocation: '',\n",
-      "      ocrDataLocation: '',\n",
-      "      extractedDataJson: '',\n",
-      "      docketStatus: '',\n",
-      "      docketRemarks: '',\n",
-      "      documentType: '',\n",
-      "      caseTitle: '',\n",
-      "      caseNo: '',\n",
-      "    },\n",
+      "  const latestCaseNo = useCaseSearchOptionsStore((s) => s.latestCaseNo)\n",
+      "\n",
+      "  const { isActionCreate } = useAction()\n",
+      "\n",
+      "  const editForm = useMemo(\n",
+      "    () => ({\n",
+      "      title: caseData?.title ?? '',\n",
+      "      caseNumber: caseData?.caseNumber ?? latestCaseNo,\n",
+      "      filingDate: new Date(caseData ? caseData.filingDate : ''),\n",
+      "      natureId: caseData?.natureId ?? '',\n",
+      "      statusKey: caseData?.statusKey ?? '',\n",
+      "      priorityKey: caseData?.priorityKey ?? '',\n",
+      "      categoryId: caseData?.categoryId ?? '',\n",
+      "      divisionId: caseData?.divisionId ?? '',\n",
+      "      assignedToId: caseData?.assignedToId ?? '',\n",
+      "      clientId: caseData?.clientId ?? '',\n",
+      "\n",
+      "      titleSearch: caseData?.titleSearch ?? '',\n",
+      "      titleSearchAlt: caseData?.titleSearchAlt ?? '',\n",
+      "      caseNumberSearch: caseData?.caseNumberSearch ?? '',\n",
+      "    }),\n",
+      "    [caseData],\n",
+      "  )\n",
+      "\n",
+      "  const form = useForm<z.infer<typeof formSchema>>({\n",
+      "    resolver: zodResolver(formSchema),\n",
+      "    defaultValues: isAddCase\n",
+      "      ? {\n",
+      "          title: '',\n",
+      "          caseNumber: '',\n",
+      "          filingDate: new Date(),\n",
+      "          natureId: '',\n",
+      "          statusKey: statuses.find((status) => status.key === 'new')?.key ?? '',\n",
+      "          priorityKey: '',\n",
+      "          categoryId: '',\n",
+      "          divisionId: '',\n",
+      "          assignedToId: '',\n",
+      "          clientId: '',\n",
+      "\n",
+      "          titleSearch: '',\n",
+      "          titleSearchAlt: '',\n",
+      "          caseNumberSearch: '',\n",
+      "        }\n",
+      "      : editForm,\n",
       "  })\n",
       "\n",
       "  useEffect(() => {\n",
-      "    if (selectedRowDetails) {\n",
-      "      const data = selectedRowDetails?.data\n",
-      "\n",
-      "      form.reset(\n",
-      "        {\n",
-      "          ...data,\n",
-      "          dateReceived: data?.dateReceived\n",
-      "            ? new Date(data?.dateReceived)\n",
-      "            : new Date(),\n",
-      "          dateAIProcessed: data?.dateAIProcessed\n",
-      "            ? new Date(data?.dateAIProcessed)\n",
-      "            : undefined,\n",
-      "          dateManualVerified: data?.dateManualVerified\n",
-      "            ? new Date(data?.dateManualVerified)\n",
-      "            : undefined,\n",
-      "        },\n",
-      "        { keepDefaultValues: true, dependencies: [selectedRowDetails] }\n",
-      "      )\n",
+      "    if (isActionCreate) {\n",
+      "      form.setValue('caseNumber', `${Number(latestCaseNo) + 1}`)\n",
       "    }\n",
-      "  }, [selectedRowDetails])\n",
+      "    if (!isActionCreate) {\n",
+      "      form.reset(editForm)\n",
+      "    }\n",
+      "  }, [caseData, editForm, form, isActionCreate, latestCaseNo])\n",
       "\n",
-      "  return form\n",
+      "  return { form, isSubmitting, setIsSubmitting }\n",
       "}\n",
       "```\n",
       "\n",
-      "I added `dependencies: [selectedRowDetails]` to the `useEffect` hook to fix the lint issue. This tells React that `selectedRowDetails` is a dependency of this effect, and it will be re-run whenever `selectedRowDetails` changes.\n"
+      "The fix was to add the missing dependency `latestCaseNo` in the `useMemo` hook.\n"
      ]
     }
    ],
